--- a/html/list.html
+++ b/html/list.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>All posts</h1>
 		<ul>
-			 <li><a href='posts/About-this-blog.html'>About this blog</a></li> <li><a href='posts/How-I-make-this-blog.html'>How I make this blog</a></li>
+			 <li><a href='posts/Get-comfortable-in-(neo)mutt.html'>Get comfortable in (neo)mutt</a></li> <li><a href='posts/About-this-blog.html'>About this blog</a></li> <li><a href='posts/How-I-make-this-blog.html'>How I make this blog</a></li>
 		</ul>
 	</body>
 </html>
