Added footer and contact info

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,9 @@
 			If you're wondering about the technical aspect of this blog, <a href="posts/How-I-make-this-blog.html">this post</a> is for you.
 			</p>
 		</article>
-	</body>
 
+		<footer>
+			<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+		</footer>
+	</body>
 </html>
