--- a/html/list.template.html
+++ b/html/list.template.html
@@ -11,5 +11,8 @@
 		<ul>
 			<!-- POSTS -->
 		</ul>
+		<footer>
+			<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+		</footer>
 	</body>
 </html>
