--- a/html/post.template.html
+++ b/html/post.template.html
@@ -11,5 +11,8 @@
 		<article>
 		<!-- POST -->
 		</article>
+		<footer>
+			<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+		</footer>
 	</body>
 </html>
