--- a/html/all.template.html
+++ b/html/all.template.html
@@ -13,7 +13,7 @@
 		</ul>
 
 		<footer>
-			<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
 		</footer>
 	</body>
 </html>
