--- a/html/contact.html
+++ b/html/contact.html
@@ -20,7 +20,7 @@
 		</article>
 
 	<footer>
-		<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
 	</footer>
 	</body>
 </html>
