--- a/html/list.html
+++ b/html/list.html
@@ -12,7 +12,7 @@
 			 <li><a href='posts/Get-comfortable-in-(neo)mutt.html'>Get comfortable in (neo)mutt</a></li> <li><a href='posts/About-this-blog.html'>About this blog</a></li> <li><a href='posts/How-I-make-this-blog.html'>How I make this blog</a></li>
 		</ul>
 		<footer>
-			<a href="contact.html">Contact me</a> | <a href="list.html">List of posts</a> | <a href="all.html">All posts</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
 		</footer>
 	</body>
 </html>
