--- a/html/all.html
+++ b/html/all.html
@@ -9,7 +9,158 @@
 	<body>
 		<h1>All posts</h1>
 		<ul>
- <article><h2>Get comfortable in (neo)mutt</h2><h3>What is mutt and neomutt?</h3>
+ <article><h2>Migrating from AutoCommands to ftplugins</h2>
+<h2>Why?</h2>
+<p>
+If you're like me, you have a lot of autocommands for specific file types in your .vimrc. Specific <code>setlocal</code>s, some nice mappings, etc. After a while those <code>autocmd</code>s start adding up and you soon have hundreds of lines of <pre><code>
+autocmd FileType file setlocal foo=bar
+</code></pre>
+</p>
+<p>
+You might want to put those commands in a function and call it once, or maybe put them in a separate file that you source with a single autocmd. At this poing you'll start wondering if there's a better way. Of course there is. We're using Vim after all, there is almost always a better way. Enter <code>ftplugins</code>.
+</p>
+
+<h2>What are ftplugins?</h2>
+<p>
+Filetype plugins, or <code>ftplugin</code>s for short, are <code>.vim</code> files that run specific commands depending on what file is opened. Vim has a lot (and I mean a lot) ftplugins built in and plugins can add additional ones.
+</p>
+
+<h2>How to use them</h2>
+<p>
+<code>ftplugin</code>s are sourced automatically (assuming you have <code>filetype plugin on</code> in your .vimrc), as long as they're in a specific folder and have a specific file name. You can write either a complete replacement to an existing <code>ftplugin</code>, or just add extra stuff to whatever Vim does by default. You control that with the directory you put it in.
+</p>
+<p>
+The file has to be named in a specific way: <code>[file type].vim</code>. You can also name it <code>[file type]_whatever.vim</code>, though I personally don't see any reason for that. The directory where it should live depends on what you want to do
+</p>
+
+<h4>Enhance defaults</h4>
+<p>
+This is what I recommend for most users. You can add key bindings, extra <code>setlocal</code>s, override a single default setting, maybe a few new commands, or whatever else you have in your <code>autocmd</code>s.
+In order to use your new settings, NeoVim users put the file in <code>~/.config/nvim/after/ftplugin,</code> while for Vim users it's <code>~/.vim/after/ftplugin/</code>
+</p>
+
+<h4>Completely override default settings</h4>
+<p>
+A word of warning before you do that: You'll have to set up <i>everything</i> Vim does by default for that specific file type. This includes omni function, comment string, format options etc. It's almost always overkill and you lose the ability to receive upstream updates for the file type.
+If you still want to go for that, put your file in <code>~/.local/share/nvim/site/ftplugin/</code> for NeoVim, or <code>~/.vim/ftplugin/</code> for Vim
+</p>
+
+<h2>ftplugin file structure</h2>
+<p>
+While the file structure isn't forced upon you, there are some things the plugin file should have: a header, a check whether it needs to load or not, and an undo
+</p>
+
+<h4>Header</h4>
+<p>
+A header is just a comment describing the file. It's useful when sharing it on the Internet, so the other person knows what it is, when was it last updated, or who made it.
+I usually use a header that looks like this:
+<pre><code>
+" *.[file] filetype config
+" Created: [date]
+" Last Modified: [date]
+" Creator: Przemek Dragańczuk <admin@draganczuk.tk>
+" Licence: WTFPL
+</code></pre>
+Feel free to use it and modify as needed
+</p>
+
+<h4>Loading check</h4>
+<p>
+Loading a file multiple times can cause some problems, like running a command multiple times. You can fix it in a simple way: check if a specific variable is defined, if it is, then there is no need to load the file, otherwise set the variable and run the rest of the file. The code for that looks like this:<pre><code>
+if exists("b:did_ftplugin")
+	finish
+endif
+let b:did_ftplugin = 1
+</code></pre>
+I prefer naming the variable depending on the filetype, for example <code>b:did_html_ftplugin</code>, that way I have a way to disable this specific file from loading by just putting <code>b:did_[filetype]_ftplugin = 1</code> in my .vimrc
+</p>
+
+<h4>Undo</h4>
+<p>
+What would happen if Vim guessed the filetype wrong and then you set it manually with <code>:setfiletype</code>? Vim would source the <code>ftplugin</code> for what it guessed, then it would source the correct one. This means that you still have all the settings from the incorrect <code>ftplugin</code>. You can get around that by setting a variable <code>b:undo_ftplugin</code> to contain all the commands that will revert whatever the <code>fftplugin</code> did.
+</p>
+<p>
+I personally put them all in a function, like this: <pre><code>
+function! s:undo()
+setl formatoptions&lt;
+setl tabstop&lt;
+setl textwidth&lt;
+endfunction
+let b:undo_ftplugin = "call s:undo()"
+</code></pre>
+</p>
+<p>
+Calling <code>setlocal [setting]&lt;</code>(notice the "&lt;" at the end) resets the setting to it's global value.
+</p>
+
+<h4>Resulting boilerplate</h4>
+<p>
+After doing everything above you should have a .vim file that contains the following:
+<pre><code>
+" *.[file] filetype config
+" Created: [date]
+" Last Modified: [date]
+" Creator: [creator]
+" Licence: [licence]
+
+if exists("b:did_[file]_ftplugin")
+	finish
+endif
+let b:did_[file]_ftplugin=1
+
+let b:undo_ftplugin = "call s:undo()"
+function s:undo()
+	
+endfunction
+</code></pre>
+</p>
+
+<h5>Update</h5>
+<p>
+It was brought to my attention that <code>b:undo_ftplugin</code> overwrites the undo created by the builtin <code>ftplugin</code>. In order to fix it, we need to change one line:
+<pre><code>
+let b:undo_ftplugin <span style="color:red">.</span>= "call s:undo()"
+</code></pre>
+Notice the red dot, which means Vim will append to, instead of overwriting, the variable
+</p>
+
+
+<h2>Writing the actual plugin</h2>
+<p>
+Now that we have the boilerplate out of the way, we can get to setting some stuff. Using <code>ftplugin</code>s gives us some extra modifiers to make sure we only affect the files we want.
+</p>
+
+<h4>setlocal</h4>
+<p>
+<code>setlocal</code> works how it used to, just remember to revert it in <code>s:undo()</code>
+</p>
+
+<h4>Key mappings</h4>
+<p>
+You can create maps that don't affect other buffers by adding <code>&lt;buffer&gt;</code> to your <code>map</code> commands. For example: 
+<pre><code>
+nnoremap &lt;buffer&gt; &lt;Leader&gt;e :echo "Hello world"
+</code></pre>
+will cause pressing &lt;Leader&gt;e to display "Hello world", but only for specific filetypes
+</p>
+
+<h4>Variables</h4>
+<p>
+If you want/need to use some variables, you can prepend them with <code>s:</code> or <code>b:</code> to make them visible only in this script (the <code>ftplugin</code> you're writing) or current buffer respectively
+</p>
+
+<h2>That's it</h2>
+<p>
+You can now move all the stuff you set in auto commands or auto groups to their own <code>ftplugin</code>s, cleaning up your .vimrc of all those <code>autocmd FileType...</code> calls.
+</p>
+
+<h2>Reference</h2>
+<p>
+<ul>
+	<li><code>:h write-plugin</code> - Overview on writing Vim plugins</li>
+	<li><code>:h ftplugin</code> - Information specific to <code>ftplugin</code>s</li>
+</ul>
+</p></article> <article><h2>Get comfortable in (neo)mutt</h2><h3>What is mutt and neomutt?</h3>
 <p>Mutt is a terminal mail client. Neomutt is a fork (or a collection of patches, to be more exact) of mutt with some added features. For the rest of the post I will be talking only about neomutt, but I might refer to it as "mutt".</p>
 <h3>Why not use something like Thunderbird</h3>
 <p>I've used Thunderbird, as well as many other clients and web UIs in the past. While most of them do what they're supposed to do, a lot of them have issues I can't live with.</p>
@@ -401,62 +552,6 @@ color normal default default
 
 </code></pre>
 Like I said, a total mess, but I'm working on it
-</p></article> <article><h2>About this blog</h2><h3>Who are you?</h3>
-<p>My name is Przemek Dragańczuk. I live in Puland and I'm currently studying IT at Uniwersytet Zielonogórski.</p>
-<p>I always liked computers, so naturally I went to an IT technikum (a specialised High Schoul where you actually learn how to do something useful) in my home city, where I discovered just how great Linux is.
-After a year from when I first learned how to use it, I installed Ubuntu on my PC, but it was so slow I decided to use a different distro. I randomly chose Manjaro and accidentally downloaded the i3 edition. I instantly fell in love with it, since on Windows I was already using as many keyboard shortcuts as possible.</p>
-<p>
-A couple months later I got bored of Manjaro and how it hulds your hand with everything, so I decided to try installing Arch. The first time I did it I broke pretty much everything I could have broken during installation. The second time went better, but it still wouldn't work. After about 5th attempt I had a working system with i3 installed.
-</p>
-<p>
-During the installing I learnt a lot about how Linux works and I finally stopped being afraid of the command line and embraced the shell. Since then I learned vim, then I switched to neovim and I didn't miss Windows and IDEs at all.
-</p>
-<p>
- Then I went to cullege and in order to make notes during lecture, a lot of which were Math, I learnt basic Latex.
-</p>
-<p>
-If you're already bored, then I want to warn you, that I'm bad at writing and getting straight to the point, which in this case is: I'm trying to live as bloat free as possible, while not sacrificing anything I like.
-</p>
-
-<h3>What is this blog?</h3>
-
-<p>
-In this blog I'm talking about a lot of things, usually Linux and Linux software. I sometimes talk about programming or make tutorials on setting up some of the software I use. I'm not writing for little kids, so expect to see some swearing, especially when I'm complaining about something
-</p>
-<p>
-This blog was written entirely in neovim on an Arch Linux PC (by the way I use Arch). It's also still work in progress, which is why some things don't look as good as they can, like the headings, which are too small or no visible border between posts and rest of the site.
-</p>
-
-<h3>What do I define is "bloat"?</h3>
-<p>
-My definition of bloat might be different from what others think, but it's really simple:
-<ul>
-	<li>Things that use more resources than they should, for example: all the electron apps, Google Chrome, Windows</li>
-	<li>Things that have a fuck ton of features nobody asked for or needs. Just look at Instagram: What used to be a simple photo sharing app now has all these features, like stories or Instagram TV that 90% of users just ignore</li>
-	<li>Anything that spies on its users, including Microsoft, Google, Facebook etc.</li>
-	<li>All those websites that take 10 minutes to load because they have to download 100MB worth of frameworks and trackers before they can show you the content</li>
-</ul>
-</p>
-
-<h3>What isn't bloat then?</h3>
-<p>
-	That big list might make you feel like there is no software I don't consider bloat, but that's not correct. There is a lot of software that no one would consider bloated, for example:
-	<ul>
-		<li>Linux: The kernel is huge and contains a lot of stuff most people don't use, but it's relatively easy to compile your own kernel without all that stuff. Even if you leave them, about 40MB for all the drivers I would ever need and a lot of other useful things is not that much</li>
-		<li>(neo)Vim and CLI apps in general are fast, small and almost all the features are useful, even if not everyone knows about them</li>
-		<li>Hundreds or thousands of apps that do just what they're supposed to do, like Mozilla Firefox, Geary, the entire Unix toul suite etc.</li>
-	</ul>
-</p>
-
-<h3>Bloat that I can't cut out of my life</h3>
-<p>
-Despite my hatred towards bloat, I still use a lot of bloated software. I use:
-<ul>
-	<li>gmail - only because I don't have the time to set up an email server on my VPS</li>
-	<li>Windows - A lot of software I have to use in cullege (like 3DSMax) works only on Windows. Also, Linux is still not the perfect platform for gaming, at least not yet</li>
-	<li>Facebook and messenger - Simply for communication with my classmates. If you say that we should use something else, you try to tell about 30 student that they should stop using the communicator they used for years and they use to talk with almost everyone and use something maybe one of them heard about before. I'll wait here and laugh at you with them</li>
-	<li>Spotify - I haven't found any other way to listen to music everywhere without problems that's just as cheap and, what's more important, legal</li>
-</ul>
 </p></article> <article><h2>How I make this blog</h2><h3>The blog script</h3>
 <p>
 I created a shell script that handles most of the things related to blogging, like creating a post and publishing it. It does not use a database (unless you count plain text files) and employs a lot of sed bullshitery to make it all work.
@@ -496,6 +591,62 @@ Besides, I treat Luke as a mentor who taught me a lot of things, like Vim text o
 </p>
 <p>
 If Luke doesn't like the fact that I practically copied his script, he can contact me through multiple means. Github issues would be the simples way.
+</p></article> <article><h2>About this blog</h2><h3>Who are you?</h3>
+<p>My name is Przemek Dragańczuk. I live in Poland and I'm currently studying IT at Uniwersytet Zielonogórski.</p>
+<p>I always liked computers, so naturally I went to an IT technikum (a specialised High School where you actually learn how to do something useful) in my home city, where I discovered just how great Linux is.
+After a year from when I first learned how to use it, I installed Ubuntu on my PC, but it was so slow I decided to use a different distro. I randomly chose Manjaro and accidentally downloaded the i3 edition. I instantly fell in love with it, since on Windows I was already using as many keyboard shortcuts as possible.</p>
+<p>
+A couple months later I got bored of Manjaro and how it holds your hand with everything, so I decided to try installing Arch. The first time I did it I broke pretty much everything I could have broken during installation. The second time went better, but it still wouldn't work. After about 5th attempt I had a working system with i3 installed.
+</p>
+<p>
+During the installing I learnt a lot about how Linux works and I finally stopped being afraid of the command line and embraced the shell. Since then I learned Vim, then I switched to neovim and I didn't miss Windows and IDEs at all.
+</p>
+<p>
+ Then I went to college and in order to make notes during lecture, a lot of which were Math, I learnt basic Latex.
+</p>
+<p>
+If you're already bored, then I want to warn you, that I'm bad at writing and getting straight to the point, which in this case is: I'm trying to live as bloat free as possible, while not sacrificing anything I like.
+</p>
+
+<h3>What is this blog?</h3>
+
+<p>
+In this blog I'm talking about a lot of things, usually Linux and Linux software. I sometimes talk about programming or make tutorials on setting up some of the software I use. I'm not writing for little kids, so expect to see some swearing, especially when I'm complaining about something
+</p>
+<p>
+This blog was written entirely in neovim on an Arch Linux PC (by the way I use Arch). It's also still work in progress, which is why some things don't look as good as they can, like the headings, which are too small or no visible border between posts and rest of the site.
+</p>
+
+<h3>What do I define is "bloat"?</h3>
+<p>
+My definition of bloat might be different from what others think, but it's really simple:
+<ul>
+	<li>Things that use more resources than they should, for example: all the electron apps, Google Chrome, Windows</li>
+	<li>Things that have a fuck ton of features nobody asked for or needs. Just look at Instagram: What used to be a simple photo sharing app now has all these features, like stories or Instagram TV that 90% of users just ignore</li>
+	<li>Anything that spies on its users, including Microsoft, Google, Facebook etc.</li>
+	<li>All those websites that take 10 minutes to load because they have to download 100MB worth of frameworks and trackers before they can show you the content</li>
+</ul>
+</p>
+
+<h3>What isn't bloat then?</h3>
+<p>
+	That big list might make you feel like there is no software I don't consider bloat, but that's not correct. There is a lot of software that no one would consider bloated, for example:
+	<ul>
+		<li>Linux: The kernel is huge and contains a lot of stuff most people don't use, but it's relatively easy to compile your own kernel without all that stuff. Even if you leave them, about 40MB for all the drivers I would ever need and a lot of other useful things is not that much</li>
+		<li>(neo)Vim and CLI apps in general are fast, small and almost all the features are useful, even if not everyone knows about them</li>
+		<li>Hundreds or thousands of apps that do just what they're supposed to do, like Mozilla Firefox, Geary, the entire Unix tool suite etc.</li>
+	</ul>
+</p>
+
+<h3>Bloat that I can't cut out of my life</h3>
+<p>
+Despite my hatred towards bloat, I still use a lot of bloated software. I use:
+<ul>
+	<li>gmail - only because I don't have the time to set up an email server on my VPS</li>
+	<li>Windows - A lot of software I have to use in college (like 3DSMax) works only on Windows. Also, Linux is still not the perfect platform for gaming, at least not yet</li>
+	<li>Facebook and messenger - Simply for communication with my classmates. If you say that we should use something else, you try to tell about 30 student that they should stop using the communicator they used for years and they use to talk with almost everyone and use something maybe one of them heard about before. I'll wait here and laugh at you with them</li>
+	<li>Spotify - I haven't found any other way to listen to music everywhere without problems that's just as cheap and, what's more important, legal</li>
+</ul>
 </p></article>
 		</ul>
 
