--- a/published/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
+++ b/published/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
@@ -5,7 +5,9 @@
 		<li>Secure your services with HTTPS</li>
 		<li>Nextcloud - everything you need and more</li>
 		<li>Some nice services you might want</li>
+		<li>Use keycloak for user management and SSO</li>
 </ol>
+(These will be clickable links, unless I forget to do it)
 <h1>Intro</h1>
 <p>
 Since you're reading this, you probably want to enter the <s>frustrating</s> marvelous world of selfhosting. Maybe it's because you want to run away from Google, or you simply like messing around with computers and want to see what you can do.
