--- a/html/list.html
+++ b/html/list.html
@@ -9,7 +9,12 @@
 	<body>
 		<h1>All posts</h1>
 		<ul>
-			 <li><a href='posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html'>Selfhosting a cloud. Part 0: Basic setup</a></li> <li><a href='posts/About-this-blog.html'>About this blog</a></li> <li><a href='posts/Get-comfortable-in-(neo)mutt.html'>Get comfortable in (neo)mutt</a></li> <li><a href='posts/How-I-make-this-blog.html'>How I make this blog</a></li> <li><a href='posts/Migrating-from-AutoCommands-to-ftplugins.html'>Migrating from AutoCommands to ftplugins</a></li>
+<li><a href="/posts/About-this-blog.html">About this blog</a></li>
+<li><a href="/posts/Get-comfortable-in-(neo)mutt.html">Get comfortable in (neo)mutt</a></li>
+<li><a href="/posts/How-I-make-this-blog.html">How I make this blog</a></li>
+<li><a href="/posts/Migrating-from-AutoCommands-to-ftplugins.html">Migrating from AutoCommands to ftplugins</a></li>
+<li><a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">Selfhosting a cloud. Part 0: Basic setup</a></li>
+
 		</ul>
 		<footer>
 			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
