Rewrite part 3: Small fixes

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
 			Welcome to my bloatless blog, where I sometimes write articles about removing bloat from my computers. Sometimes I also write tutorials on setting up the software I use. If you're looking for a longer description of this blog I recommend reading <a href="posts/About-this-blog.html">this post</a> first.
 			</p>
 			<p>
-			I have a list of links to all the posts <a href="list.html">right here</a>. If you want a wall of text with all the posts on one page, look <a href="all.html">here</a>.
+			I have a list of links to all the posts <a href="list.html">right here</a>. There is also an RSS feed available <a href="/rss.xml">here</a>.
 			</p>
 			<p>
 			If you're wondering about the technical aspect of this blog, <a href="posts/How-I-make-this-blog.html">this post</a> is for you.
@@ -26,7 +26,7 @@
 		</article>
 
 		<footer>
-			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/all.html">All posts</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/rss/xml">RSS feed</a>
 		</footer>
 	</body>
 </html>
