--- a/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
+++ b/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
@@ -1,7 +1,7 @@
 <h1>Selfhosting a cloud</h1>
 <ol start=0>
 		<li>Basic setup (this post)</li>
-		<li>Reverse Proxy with Traefik v2</li>
+		<li><a href="/posts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">Reverse Proxy with Traefik v2</a></li>
 		<li>Secure your services with HTTPS</li>
 		<li>Nextcloud - everything you need and more</li>
 		<li>Some nice services you might want</li>
@@ -36,7 +36,7 @@ A VPS is a virtual machine running on an actual server. It has a limited amount 
 </p>
 <h2>Where to buy a VPS?</h2>
 <p>
-I personally recommend <a href="https://hetzner.com">Hetzner</a>. They have great pricing (about 1/4 the price others want for similar servers). Their cheapest option for 3 Euro is perfect when you're just starting. You can always move to a more expensive plan later if you need/want to.
+I personally recommend <a href="https://hetzner.cloud/?ref=spDKdULBmfBZ">Hetzner</a> (that's a refferal link). They have great pricing (about 1/4 the price others want for similar servers). Their cheapest option for 3 Euro is perfect when you're just starting. You can always move to a more expensive plan later if you need/want to.
 </p>
 <p class="offtopic">
 I'm currently using their 11 Euro plan (CX31) since I needed the extra RAM for hosting game servers. All this SSD space is also useful for cloud file storage.
