--- a/drafts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html
+++ b/drafts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html
@@ -1,11 +1,11 @@
 <h1>Selfhosting a cloud</h1>
 <ol start=0>
-		<li><a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">Basic setup</a></li>
-		<li>Reverse Proxy with Traefik v2 (this post)</li>
-		<li>Secure your services with HTTPS</li>
-		<li>Nextcloud - everything you need and more</li>
-		<li>Some nice services you might want</li>
-		<li>Use keycloak for user management and SSO</li>
+    <li><a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">Basic setup</a></li>
+    <li>Reverse Proxy with Traefik v2 (this post)</li>
+    <li>Secure your services with HTTPS</li>
+    <li>Nextcloud - everything you need and more</li>
+    <li>Some nice services you might want</li>
+    <li>Use keycloak for user management and SSO</li>
 </ol>
 <h2>Disclaimer</h2>
 <p>Due to how disorganised I am, there will be a lot of tangents and (more or less) off-topic paragraphs.</p>
@@ -15,7 +15,7 @@ Any paragraph that looks like this is one of those paragraphs. You can ignore th
 <p>
 I will sometimes use these paragraphs to explain something in more details.
 </p>
-<h1>This post assumes you read the <a href="drafts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">previous post</a></h1>
+<h1>This post assumes you read the <a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">previous post</a></h1>
 <h1><a href="#skip">If you want to skip my rambling and go straight to installing and configuring Traefik click here</a> </h1>
 
 <h1>What is a reverse proxy? Do I need it?</h1>
@@ -72,13 +72,13 @@ Since we're using docker and docker-compose for everything, our proxy will also 
 <pre><code>
 version: "3"
 services:
-		traefik:
-				image: traefik
-				container_name: traefik
-				restart: unless-stopped
-				ports:
-						- 80:80
-						- 443:443
+    traefik:
+        image: traefik
+        container_name: traefik
+        restart: unless-stopped
+        ports:
+            - 80:80
+            - 443:443
 </code></pre>
 Create a new folder (like proxy) in your main servers folder and paste that to docker-compose.yml. Right now everything in this file was explained earlier.
 </p>
@@ -87,16 +87,16 @@ Create a new folder (like proxy) in your main servers folder and paste that to d
 <p>
 We need to provide some files to Traefik. These files are:
 <ul>
-		<li><code>/var/run/docker.sock</code> - Docker socket, so that Traefik knows about other containers</li>
-		<li>./traefik.yml - main "static" configuration file</li>
-		<li>./data/extra-conf - additional configuration files</li>
+    <li><code>/var/run/docker.sock</code> - Docker socket, so that Traefik knows about other containers</li>
+    <li>./traefik.yml - main "static" configuration file</li>
+    <li>./data/extra-conf - additional configuration files</li>
 </ul>
 We do that by adding the following section to service definition in docker-compose.yml:
 <pre><code>
 volumes:
-		- /var/run/docker.sock:/var/run/docker.sock
-		- ./traefik.yml:/etc/traefik/traefik.yml
-		- ./data/extra-conf:/extra-conf
+    - /var/run/docker.sock:/var/run/docker.sock
+    - ./traefik.yml:/etc/traefik/traefik.yml
+    - ./data/extra-conf:/extra-conf
 </code></pre>
 The syntax is pretty simple. It's local file : container file. Prepend "./" to local file to use relative path.
 </p>
@@ -112,7 +112,7 @@ docker network create proxy
 Now we just need to tell docker-compose to connect traefik to that network by adding this section to service definition:
 <pre><code>
 networks:
-		- proxy
+    - proxy
 </code></pre>
 As you can see from the syntax, we can specify multiple networks, though we won't do it now.
 </p>
@@ -120,8 +120,8 @@ As you can see from the syntax, we can specify multiple networks, though we won'
 The last thing to do in docker-compose right now is to tell docker-compose that it's allowed to use that network. Add this section to the end of file, but make sure that "networks:" is <b>NOT</b> indented at all:
 <pre><code>
 networks:
-		proxy:
-				external: true
+    proxy:
+        external: true
 </code></pre>
 This block should have the same indentation level as "services" and "version".
 </p>
@@ -137,29 +137,29 @@ Here's a basic traefik.yml file configured for usage with docker:
 
 # What ports should we listen on
 entrypoints:
-		# You can replace "http" here with "web" or any other name you want
-		http:
-				address: ":80"
-		https:
-				address: ":443"
+    # You can replace "http" here with "web" or any other name you want
+    http:
+        address: ":80"
+    https:
+        address: ":443"
 # You'll often find these entrypoints called "web" and "web-secure"
 
 # Where will other information be available
 providers:
-		# Docker containers can set information about themselves
-		# This allows traefik to read that information
-		docker:
-				# Docker socket
-				endpoint: "unix:///var/run/docker.sock"
-				# We don't want *every* service (like databases) to be exposed
-				exposedByDefault: false
-				# Access containers with this network
-				network: proxy
-		# Extra configuration can be stored in this folder
-		file:
-				directory: /extra-conf
-				# watch for changes and reload configuration as needed
-				watch: true
+    # Docker containers can set information about themselves
+    # This allows traefik to read that information
+    docker:
+        # Docker socket
+        endpoint: "unix:///var/run/docker.sock"
+        # We don't want *every* service (like databases) to be exposed
+        exposedByDefault: false
+        # Access containers with this network
+        network: proxy
+    # Extra configuration can be stored in this folder
+    file:
+        directory: /extra-conf
+        # watch for changes and reload configuration as needed
+        watch: true
 </code></pre>
 I've put some comments to make it easier to understand.
 </p>
@@ -174,17 +174,17 @@ Modify the docker-compose for whoami service. Remove the "ports" section and add
 Now we need to add traefik configuration to whoami container. We do it by adding "labels" to the container. Add following lines to whoami service definition:
 <pre><code>
 labels:
-		# Enable traefik for this container
-		- traefik.enable: true
-		# We want to route traffic through entrypoint "http" (defined in traefik.yml)
-		- traefik.http.routers.whoami.entrypoints: http
-		# What URL do we want this app to be available at?
-		# Replace with your domain
-		- traefik.http.routers.whoami.rule: Host(`example.com`)
-		# What port is the container normally using?
-		# Whoami listens on port 80. It's not exposed outside,
-		# but traefik can route to it
-		- traefik.http.services.whoami.loadbalancer.server.port: 80
+    # Enable traefik for this container
+    - traefik.enable: true
+    # We want to route traffic through entrypoint "http" (defined in traefik.yml)
+    - traefik.http.routers.whoami.entrypoints: http
+    # What URL do we want this app to be available at?
+    # Replace with your domain
+    - traefik.http.routers.whoami.rule: Host(`example.com`)
+    # What port is the container normally using?
+    # Whoami listens on port 80. It's not exposed outside,
+    # but traefik can route to it
+    - traefik.http.services.whoami.loadbalancer.server.port: 80
 </code></pre>
 Now you can <code>docker-compose up -d</code> both whoami and traefik. When you navigate to http://example.com you should see the same whoami information as before.
 </p>
