--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 		</article>
 
 		<footer>
-			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/rss/xml">RSS feed</a>
+			<a href="/contact.html">Contact me</a> | <a href="/list.html">List of posts</a> | <a href="/rss.xml">RSS feed</a>
 		</footer>
 	</body>
 </html>
