--- a/html/list.html
+++ b/html/list.html
@@ -9,12 +9,13 @@
 	<body>
 		<h1>All posts</h1>
 		<ul>
+<li><a href="/posts/Selfhosting-a-cloud.-Part-4:-Nextcloud---everything-you-need-and-more.html">Selfhosting a cloud. Part 4: Nextcloud - everything you need and more</a></li>
+<li><a href="/posts/About-this-blog.html">About this blog</a></li>
+<li><a href="/posts/Get-comfortable-in-(neo)mutt.html">Get comfortable in (neo)mutt</a></li>
+<li><a href="/posts/How-I-make-this-blog.html">How I make this blog</a></li>
+<li><a href="/posts/Migrating-from-AutoCommands-to-ftplugins.html">Migrating from AutoCommands to ftplugins</a></li>
 <li><a href="/posts/Selfhosting-a-cloud.-Part-3:-Secure-your-services-with-HTTPS.html">Selfhosting a cloud. Part 3: Secure your services with HTTPS</a></li>
 <li><a href="/posts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">Selfhosting a cloud. Part 1: Reverse Proxy</a></li>
-<li><a href="/posts/Migrating-from-AutoCommands-to-ftplugins.html">Migrating from AutoCommands to ftplugins</a></li>
-<li><a href="/posts/How-I-make-this-blog.html">How I make this blog</a></li>
-<li><a href="/posts/Get-comfortable-in-(neo)mutt.html">Get comfortable in (neo)mutt</a></li>
-<li><a href="/posts/About-this-blog.html">About this blog</a></li>
 <li><a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">Selfhosting a cloud. Part 0: Basic setup</a></li>
 
 		</ul>
