--- a/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
+++ b/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
@@ -2,8 +2,8 @@
 <ol start=0>
 		<li>Basic setup (this post)</li>
 		<li><a href="/posts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">Reverse Proxy with Traefik v2</a></li>
-		<li><a href="Selfhosting-a-cloud.-Part-4:-Secure-your-services-with-HTTPS.html">Secure your services with HTTPS</a></li>
-		<li><a href="Selfhosting-a-cloud.-Part-5:-Nextcloud---everything-you-need-and-more">Nextcloud - everything you need and more</a></li>
+		<li><a href="/posts/Selfhosting-a-cloud.-Part-2:-Secure-your-services-with-HTTPS.html">Secure your services with HTTPS</a></li>
+		<li><a href="/posts/Selfhosting-a-cloud.-Part-3:-Nextcloud---everything-you-need-and-more">Nextcloud - everything you need and more</a></li>
 		<li>Some nice services you might want</li>
 		<li>Use keycloak for user management and SSO</li>
 </ol>
