--- a/drafts/Selfhosting-a-cloud.-Part-3:-Nextcloud---everything-you-need-and-more.html
+++ b/drafts/Selfhosting-a-cloud.-Part-3:-Nextcloud---everything-you-need-and-more.html
@@ -2,7 +2,7 @@
 <ol start=0>
     <li><a href="/posts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html">Basic setup</a></li>
     <li><a href="/posts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">Reverse Proxy with Traefik v2</a></li>
-		<li><a href="Selfhosting-a-cloud.-Part-4:-Secure-your-services-with-HTTPS.html">Secure your services with HTTPS</a></li>
+		<li><a href="/posts/Selfhosting-a-cloud.-Part-2:-Secure-your-services-with-HTTPS.html">Secure your services with HTTPS</a></li>
     <li>Nextcloud - everything you need and more (this post)</li>
     <li>Some nice services you might want</li>
     <li>Use keycloak for user management and SSO</li>
