HTML files have .html extensions

--- a/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
+++ b/drafts/Selfhosting-a-cloud.-Part-0:-Basic-setup.html
@@ -3,7 +3,7 @@
 		<li>Basic setup (this post)</li>
 		<li><a href="/posts/Selfhosting-a-cloud.-Part-1:-Reverse-Proxy-with-Traefik-v2.html">Reverse Proxy with Traefik v2</a></li>
 		<li><a href="/posts/Selfhosting-a-cloud.-Part-2:-Secure-your-services-with-HTTPS.html">Secure your services with HTTPS</a></li>
-		<li><a href="/posts/Selfhosting-a-cloud.-Part-3:-Nextcloud---everything-you-need-and-more">Nextcloud - everything you need and more</a></li>
+		<li><a href="/posts/Selfhosting-a-cloud.-Part-3:-Nextcloud---everything-you-need-and-more.html">Nextcloud - everything you need and more</a></li>
 		<li>Some nice services you might want</li>
 		<li>Use keycloak for user management and SSO</li>
 </ol>
